Backend/pg.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: val
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999       # postgres image's default uid
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
