Backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: val-backend-svc
spec:
  selector:
    app: val-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
