Backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: val-backend-ingress
  namespace: val
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.valotournament.in
      secretName: api-valotournament-tls
  rules:
    - host: api.valotournament.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: val-backend-svc
                port:
                  number: 80
